--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,4 @@
 name: CI
-
-# Based on CI from https://github.com/agda/agda2hs/tree/master 
-
 # Trigger the workflow on push or pull request, but only for the master branch
 on:
   pull_request:
@@ -13,47 +10,28 @@ on:
     branches: [master]
 
 jobs:
-  cabal:
-    name: ${{ matrix.os }} / ghc ${{ matrix.ghc }}
-    runs-on: ${{ matrix.os }}
+  test:
+    name: Testing with ${{ matrix.agda-version }}
     strategy:
       matrix:
-        os: [ubuntu-latest]   # macOS-latest, windows-latest
-        cabal: [3.12.1]
-        ghc: [9.4.8]
+        os: [ubuntu-latest]
+        agda-version: ['2.7.0.1']
+
+    runs-on: ${{ matrix.os }}
     steps:
-    - uses: actions/checkout@v3
-      if: github.event.action == 'opened' || github.event.action == 'synchronize' || github.event.ref == 'refs/heads/master'
+      - uses: actions/checkout@v4
 
-    # Takes care of ghc and cabal. See https://github.com/haskell/actions.
-    - uses: haskell-actions/setup@v2
-      id: setup-haskell-cabal
-      name: Setup Haskell
-      with:
-        ghc-version: ${{ matrix.ghc }}
-        cabal-version: ${{ matrix.cabal }}
+      # Setup the versions of Agda specified in the matrix,
+      # together with their recommended versions of agda-stdlib:
+      - uses: wenkokke/setup-agda@v2
+        with:
+          agda-version: ${{ matrix.agda-version }}
+          agda-stdlib-version: 'recommended'
 
-    # Generate a cabal.project.freeze file with all dependencies. We use the
-    # hash of this as the cache key, so when a dependency changes we upload a
-    # new cache.
-    - name: Freeze
-      run: cabal freeze
-
-    # Cache the contents of ~/.cabal/store to avoid rebuilding dependencies for
-    # every build. `restore-keys` makes it use the latest cache even if the
-    # fingerprint doesn't match, so we don't need to start from scratch every
-    # time a dependency changes.
-    - uses: actions/cache@v3
-      name: Cache ~/.cabal/store
-      with:
-        path:         ${{ steps.setup-haskell-cabal.outputs.cabal-store }}
-        key:          ${{ runner.os }}-${{ matrix.ghc }}-${{ hashFiles('cabal.project.freeze') }}
-        restore-keys: ${{ runner.os }}-${{ matrix.ghc }}-
-
-    - name: Check all files
-      run: |
-        # Loop through all .agda files in the repository and typecheck them
-        for file in $(find . -name "*.agda"); do
-          echo "Typechecking $file..."
-          agda "$file" || { echo "Error: Typechecking failed for $file"; exit 1; }
-        done
+      - name: Check all files
+        run: |
+          # Loop through all .agda files in the repository and typecheck them
+          for file in $(find . -name "*.agda"); do
+            echo "Typechecking $file..."
+            agda "$file" || { echo "Error: Typechecking failed for $file"; exit 1; }
+          done
