FIX: Make pipeline run in main

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ on:
     paths:
       - 'src/**'
       - '.github/workflows/**.yml'
-    branches: [master]
+    branches: [main]
 
 jobs:
   test:
